# hydrophis

./: .gitignore  CONTRIBUTING.md  DESIGN.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
arafura/: __init__.py  cli.py  transpiler.py
scripts/: regenerate_golden_outputs.py
src/arafura/: transpiler.py
tests/: __init__.py  conftest.py  test_golden_master.py  test_transpiler.py
tests/fixtures/: design_update_features.py  example.py  features.py  new_features.py  struct_decorators.py  typedef.py
tests/golden_outputs/: design_update_features.c  example.c  features.c  new_features.c  struct_decorators.c  typedef.c
