[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arafura"
version = "0.1.0"
description = "A transpiler that converts Python syntax with C semantics into C code"
readme = "README.md"
requires-python = "~=3.13.0"
license = "MIT"
authors = [
    {name = "Elazar Gershuni"}
]
keywords = ["transpiler", "c", "python", "compiler"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[project.scripts]
arafura = "arafura.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

